--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,5 +2,6 @@
 @import './utils/breakpoints';
 @import './header';
 @import './gallery';
+@import './container-films';
 @import './footer';
 @import './modal';
