--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -24,6 +24,8 @@
     --button-accent-color: #FF6B01;
     //  button hover and focus????
 
+    // ========== Nav =========
+    --nav-underline-color: #FF001B;
 
     // ========== Transition  ==========
     --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
