header-conflict-resolve?

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -156,6 +156,6 @@
     }
 }
 
-.header__link--active {
-    border-bottom: 3px solid var(--nav-underline-color);
-}
+// .header__link--active {
+//     border-bottom: 3px solid var(--nav-underline-color);
+// }
