--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,5 +3,6 @@
 @import './header';
 @import './gallery';
 @import './container-films';
+@import './my-library';
 @import './footer';
 @import './modal';
