--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,15 @@
 <footer class="footer">
   <div class="footer__box">
     <div class="footer__info">
-      <span class="footer__text">&#169; 2020</span>
+      <span class="footer__text">&#169; 2022</span>
       <span class="footer__text">All Rights Reserved </span>
     </div>
-    <p class="footer__text">
-      Developed with
+    <div class="footer__info">
+      <span class="footer__text">Developed with</span>
       <svg class="footer__icon-heart" width="14" height="14">
         <use href="./images/icons.svg#icon-heart"></use>
       </svg>
-      <a class="footer__link" href=""> by GoIT Students</a>
-    </p>
+      <button type="button" class="footer__button">by GoIT Students</button>
+    </div>
   </div>
 </footer>
