--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -29,7 +29,7 @@
             text-align: center;
             font-weight: 400;
 
-            @media screen and (max-width: $mobile) {
+            @media screen and (max-width: 767px) {
                 font-size: 14px;
                 line-height: 1.14;
             };
@@ -37,7 +37,11 @@
             @media screen and (min-width: $tablet) {
                 font-size: 16px;
                 line-height: 1.19;
-            };         
+            };   
+            
+            &:not(:last-child){
+                margin-right: 5px;
+            }
         
         }  
         
@@ -46,13 +50,16 @@
             margin-left: 10px;
         }
 
-        &__link {
+        &__button {
+            border: none;
+            background-color: transparent;
+            text-decoration: underline;
             color: var(--grey-color-footer);
 
             text-align: center;
             font-weight: 400;
             cursor: pointer;
-            @media screen and (max-width: $mobile) {
+            @media screen and (max-width: 767px) {
                     font-size: 14px;
                     line-height: 1.14;
                 }   
@@ -65,9 +72,16 @@
         }
 
         &__info {
-            @media screen and (min-width: $tablet) {
-                    margin-right: 5px;
-                }
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &:not(:last-child){
+                @media screen and (min-width: $tablet) {
+                        margin-right: 5px;
+                    }
+            }
+           
         }
 }
 
