--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,7 @@
 @import './utils/breakpoints';
 @import './header';
 @import './gallery';
+@import './pagination';
 @import './container-films';
 @import './my-library';
 @import './footer';
