--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,1 +1,4 @@
-<div id="pagination" class="tui-pagination"></div>
+
+<div class="container">
+    <div id="pagination" class="tui-pagination"></div>
+</div>
