--- a/src/sass/_container-films.scss
+++ b/src/sass/_container-films.scss
@@ -1,25 +1,23 @@
-// .position-films {
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: center;
-//     gap: 20px;
-// }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 320px;
+  padding: 20px;
+  gap: 20px;
 
-// .position-films__item {
-
-
-//     max-width: 395px;
-//     max-height: 635px;
-//     @media screen and (min-width:768px) {
-//         flex-basis: calc((100% - 64px) / 2);
-
-//     }
-
-//     @media screen and (min-width:1200px) {
-//         flex-basis: calc((100% - 64px) / 3);
-
-//     }
-
-
-
-// }
+  @media screen and (min-width: 768px) {
+    gap: 32px;
+    max-width: 768px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+    column-gap: 16px;
+  }
+}
