add button scroll to top

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -85,16 +85,9 @@
         }
 }
 
-span.footer__text {
+.footer__text--border {
     border-right: 1px solid var(--grey-color-footer);
 }
 
-// font-family: 'Roboto';
-// font-style: normal;
-// font-weight: 400;
-// font-size: 14px;
-// line-height: 16px;
-// display: flex;
-// align-items: center;
-// text-align: center;
+
 
