--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,14 @@
 <footer class="footer">
   <div class="footer__box">
     <div class="footer__info">
-      <span class="footer__text">&#169; 2022</span>
-      <span class="footer__text">All Rights Reserved </span>
+      <span class="footer__text footer__text--border">&#169; 2022</span>
+      <span class="footer__text footer__text--border"
+        >All Rights Reserved
+      </span>
     </div>
     <div class="footer__info">
       <span class="footer__text">Developed with</span>
-      <svg class="footer__icon-heart" width="14" height="14">
+      <svg class="footer__icon-heart" width="20" height="20">
         <use href="./images/icons.svg#icon-heart"></use>
       </svg>
       <button type="button" class="footer__button">by GoIT Students</button>
