--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,58 +1,8 @@
-<div class="backdrop is-hidden backdrop__is-hidden" data-modal>
-    <div class="modal-movie modal__is-hidden">
-        <button type="button" class="modal__close-button" data-modal-close>
-                <svg class="modal_icon icon" width="14" height="14">
-                    <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-        </button>
-    </div>
+<div class="backdrop is-hidden backdrop__is-hidden">
+    <div class="modal-movie  modal__is-hidden">
 
-    <div class="modal__card">
-        // сюди вставка з сервера
-    </div>
 
+        </div>
+    </div>
 </div>
 
-//потім перейде до js файлу
-<div>
-    <img class="modal__img" >
-</div>
-
-<div>
-    <h2 class="modal__title">title</h2>
-
-    <table class="modal-movie-properties">
-        <tr>
-            <td class="modal-movie-properties__name">Vote / Votes</td>
-            <td class="modal-movie-properties__value"><span class="modal-movie-properties__vote">vote</span>/votes</td>
-        </tr>
-    
-        <tr>
-            <td class="modal-movie-properties__name">Popularity</td>
-            <td class="modal-movie-properties__value"></td>
-        </tr>
-    
-        <tr>
-            <td class="modal-movie-properties__name">Original Title</td>
-            <td class="modal-movie-properties__value">original_title</td>
-        </tr>
-    
-        <tr>
-            <td class="modal-movie-properties__name">Genre</td>
-            <td class="modal-movie-properties__value"></td>
-        </tr>
-    
-    </table>
-
-
-    <h3 class="modal__descr-title">About</h3>
-    <p class="modal__descr">overview</p>
-
-
-    <div class="modal__button-container">
-        <button type="button" class="button button--accent">ADD TO WATCHED</button>
-        <button type="button" class="button button--white">ADD TO QUEUE</button>
-    </div>
-
-
-</div>
