--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<div class="gallery"></div>
+<div class="gallery filmsModal"></div>
 <div class="pagination-container">
   <button
     class="pagination-button"
