--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.25);
     z-index: 20;
 
     visibility: visible;
@@ -22,6 +22,44 @@
     @media screen and (min-width: 768px) {
         opacity: 0;
         transform: translate(-50%, -50%) scale(0.6);
+    }
+}
+
+.modal-movie {
+    background-color: var(--secondary-color);
+    //box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+    opacity: 1;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: 767px) {
+        position: absolute;
+        margin-right: auto;
+        margin-left: auto;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
+        width: 280px;
+        padding: 48px 20px 40px 20px;
+        min-height: 357px;
+
+    }
+
+    @media screen and (min-width: 768px) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 704px;
+        padding: 40px 30px 40px 72px;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 806px;
+        padding: 40px 12px 40px 12px;
+        min-height: 558px;
     }
 }
 
@@ -58,20 +96,8 @@
 
 }
 
-.modal-movie {
-
-    width: 280px;
-    padding: 48px 20px 40px 20px;
-
-    @media screen and (min-width: 768px) {
-        width: 704px;
-        padding: 40px 30px 40px 72px;
-    }
-
-    @media screen and (min-width: 1024px) {
-        width: 806px;
-        padding: 40px 12px 40px 12px;
-    }
+.modal__card {
+    display: flex;
 }
 
 .modal__img {
@@ -82,8 +108,12 @@
 
         @media screen and (min-width: 768px) {
             margin-bottom: 0px;
+            margin-right: 68px;
         }
-
+        
+        @media screen and (min-width: 1024px) {
+            margin-right: 16px;
+            }
 }
 
 .modal__title {
@@ -91,11 +121,18 @@
     line-height: 1.15;
     color: var(--dominant-color);
     margin-bottom: 20px;
+    text-transform: uppercase;
 
         @media screen and (min-width: 1024px) {
             font-size: 30px;
         } 
 }
+
+
+.modal-movie-properties {
+    margin-bottom: 20px;
+}
+
 
 .modal-movie-properties__name {
     font-size: 12px;
@@ -137,4 +174,55 @@
     line-height: 1.67;
     color: var(--dominant-color);
     margin-bottom: 20px;
+}
+
+.modal__button-container {
+    display: flex;
+
+    & #WATCHED {
+        margin-right: 20px;
+
+        @media screen and (min-width: 768px) {
+            margin-right: 15px;
+        }
+    }
+}
+
+
+
+.modal__button {
+    font-family: var(--dominant-font);
+    background-color: var(--secondary-color);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.33;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    color: var(--dominant-color);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 110px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: var(--secondary-color);
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 125.03px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 136px;
+    }
+
 }
