--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,6 +16,7 @@
         <a class="header--link" href="./libraty.html">My Library</a>
       </li>
     </ul>
+    <button class="header__auth-btn" data-auth-modal-open>Sign In</button>
   </nav>
   <form class="header__form">
     <input
