--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -226,3 +226,119 @@
     }
 
 }
+
+// Authentication Start
+.auth__modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%)scale(1);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--secondary-color);
+    width: 40%;
+    height: 60%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+    border-radius: 16px;
+}
+.auth__modal-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.auth__paragraph {
+    padding-top: 20px;
+    font-size: 12px;
+    line-height: 1.17;
+    list-style: none;
+    color: var(--dominant-color);
+}
+.auth__google-btn {
+    margin-top: 15px;
+}
+.auth__form{
+    display: flex;
+    padding: 30px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.auth__label{
+    padding-bottom: 15px;
+    font-size: 12px;
+    line-height: 1.17;
+    list-style: none;
+    color: var(--dominant-color);
+}
+.auth__input{
+    width: 100%;
+    height: 40px;
+    max-width: 448px;
+    cursor: pointer;
+    transition: border var(--animation-timing-function);
+    border: 1px solid rgba(33,33,33,.2);
+    border-radius: 4px;
+    outline: none;
+    margin: 4px 0 10px;
+    padding: 12px 42px;
+}
+.auth__btn {
+    margin-left: auto;
+    margin-right: auto;
+
+    border: 1px solid #FFFFFF;
+        border-radius: 5px;
+
+        padding: 0 0;
+    
+        background-color: var(--dominant-color);
+        color: #FFFFFF;
+        border-color: #FFFFFF;
+
+        font-size: 12px;
+        line-height: 1.33;
+           
+        text-align: center;
+        text-transform: uppercase;
+
+        &:not(:last-child) {
+               margin-right: 18px;
+            }
+
+
+        @media screen and (min-width: 768px) {
+            min-width: 152px;
+            min-height: 44px;
+            
+            
+            &:not(:last-child) {
+                margin-right: 32px;
+                }
+            
+        }
+
+        @media screen and (min-width: 1200px) {
+            min-width: 148px;
+             min-height: 42px;
+
+            &:not(:last-child) {
+                margin-right: 16px;
+                    }
+                }
+       
+
+            &:hover {
+                background-color: var(--accent-color);
+                border-color: var(--accent-color);
+            }
+}
+
+// Authentication End
