--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,22 +1,11 @@
 <div class="gallery"></div>
-<div class="pagination-container">
-  <button
-    class="pagination-button"
-    id="prev-button"
-    aria-label="Previous page"
-    title="Previous page"
-  >
-    &lt;
-  </button>
-
-  <div id="pagination-numbers"></div>
-
-  <button
-    class="pagination-button"
-    id="next-button"
-    aria-label="Next page"
-    title="Next page"
-  >
-    &gt;
-  </button>
+<div class="pagination">
+    <ul>
+        <li>
+            <!-- <button class="btn prev">Prev</button>
+            <button class="btn next">next</button> -->
+        </li>
+        <!--лішки прийдуть з скрипту -->
+    </ul>
 </div>
+
