--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,1 +1,10 @@
-<div id="pagination" class="tui-pagination"></div>
+<div class="pagination">
+    <ul>
+        <li>
+            <button class="btn prev">Prev</button>
+            <button class="btn next">next</button>
+        </li>
+       
+    </ul>
+</div> 
+<!--лішки прийдуть з скрипту -->
