--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <div class="gallery filmsModal"></div>
-<div class="pagination-container">
+<!-- <div class="pagination-container">
   <button
     class="pagination-button"
     id="prev-button"
@@ -19,4 +19,4 @@
   >
     &gt;
   </button>
-</div>
+</div> -->
