--- a/src/partials/my-library.html
+++ b/src/partials/my-library.html
@@ -17,7 +17,7 @@
     <button class="header__auth-btn" data-auth-modal-open>Sign In</button>
   </nav>
   <div class="btn-container">
-    <button class="wached-btn active">wached</button>
-    <button class="queue-btn">queue</button>
+    <button class="wached-btn active" id="#watched">watched</button>
+    <button class="queue-btn" id="#queue">queue</button>
   </div>
 </header>
