--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.25);
     z-index: 20;
-
+    overflow: overlay;
     visibility: visible;
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -35,15 +35,23 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (max-width: 767px) {
+
+        position: absolute;
+    
+        top: 5px;
+
+        z-index: 149;
+
+
         position: absolute;
         margin-right: auto;
         margin-left: auto;
-        top: 50%;
+        top: 10px;
         left: 50%;
-        transform: translate(-50%, -50%) scale(1);
+        transform: translate(-50%, 0%) scale(1);
         width: 280px;
         padding: 48px 20px 40px 20px;
-        min-height: 357px;
+ 
 
     }
 
@@ -52,7 +60,7 @@
         top: 50%;
         left: 50%;
         width: 704px;
-        padding: 40px 30px 40px 72px;
+        padding: 40px 72px 40px 30px;
         transform: translate(-50%, -50%) scale(1);
     }
 
@@ -96,24 +104,63 @@
 
 }
 
+.modal__icon {
+    fill: var(--dominant-color);
+    color: var(--dominant-color);
+        width: 100%;
+            height: 100%;
+
+    .modal__close-button:hover &,
+    .modal__close-buttons:focus & {
+        fill: var(--secondary-color);
+        cursor: pointer;
+    }
+}
+
 .modal__card {
-    display: flex;
+    margin: auto;
+    @media screen and (min-width: 768px) {
+            display: flex;
+        }
 }
 
 .modal__img {
-    display: block;
+    object-fit: cover;
     width: 100%;
     height: 100%;
-    margin-bottom: 20px;
+    display: block;
 
-        @media screen and (min-width: 768px) {
-            margin-bottom: 0px;
-            margin-right: 68px;
-        }
-        
-        @media screen and (min-width: 1024px) {
-            margin-right: 16px;
-            }
+
+}
+
+.modal__wrapper {
+    margin-bottom: 20px;
+    width: 240px;
+    height: 357px;
+
+    @media screen and (min-width: 768px) {
+        width: 264px;
+        height: 373.55px;
+        margin-bottom: 0px;
+        margin-right: 68px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 375px;
+        height: 478px;
+        margin-right: 16px;
+    }
+}
+
+
+.modal__filminfo {
+    @media screen and (min-width: 768px) {
+        width: 264px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 391px;
+    }
 }
 
 .modal__title {
@@ -122,9 +169,11 @@
     color: var(--dominant-color);
     margin-bottom: 20px;
     text-transform: uppercase;
+    text-align: center;
 
         @media screen and (min-width: 1024px) {
             font-size: 30px;
+            line-height: 1.17;
         } 
 }
 
@@ -133,11 +182,31 @@
     margin-bottom: 20px;
 }
 
+.modal-movie-properties__infzo {
+
+    
+    &:last-child {
+        padding-bottom: 0px;
+    }
+}
+
+
+
 
 .modal-movie-properties__name {
     font-size: 12px;
     line-height: 1.33;
     color: var(--grey-color-modal);
+    padding-bottom: 8px;    
+
+    &:first-child {
+            white-space: nowrap;
+            border-right: 39px solid transparent;
+        }
+
+    &:last-child {
+        padding-bottom: 0px;
+    }
 
 }
 
@@ -148,6 +217,10 @@
     align-items: center;
     text-transform: uppercase;
     color: var(--dominant-color);
+
+    & #votes {
+            margin-left: 7px;
+        }
 }
 
 .modal-movie-properties__vote {
@@ -158,6 +231,9 @@
     background-color: var(--button-accent-color);
     color: var(--secondary-color);
     border-radius: 5px;
+    margin-right: 7px;
+
+    
 }
 
 
@@ -176,16 +252,15 @@
     margin-bottom: 20px;
 }
 
+
+
 .modal__button-container {
     display: flex;
+    justify-content: space-between;
 
-    & #WATCHED {
-        margin-right: 20px;
-
-        @media screen and (min-width: 768px) {
-            margin-right: 15px;
+    @media screen and (min-width: 1024px) {
+            justify-content: center;
         }
-    }
 }
 
 
@@ -196,6 +271,7 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 1.33;
+    text-transform: uppercase;
     border: 1px solid #000000;
     border-radius: 5px;
     color: var(--dominant-color);
@@ -204,17 +280,19 @@
     text-align: center;
     width: 110px;
     height: 44px;
-    display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    padding: 0;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
         background-color: var(--accent-color);
         color: var(--secondary-color);
+        border: none;
+        transform: scale(1.1);
     }
 
     @media screen and (min-width: 768px) {
@@ -225,120 +303,20 @@
         width: 136px;
     }
 
+
+
 }
 
-// Authentication Start
-.auth__modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%)scale(1);
+#watched {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @media screen and (min-width: 768px) {
+        margin-right: 15px;
+    }
+}
 
-    background-color: var(--secondary-color);
-    width: 40%;
-    height: 60%;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
-    border-radius: 16px;
-}
-.auth__modal-wrapper {
+#trailer {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-.auth__paragraph {
-    padding-top: 20px;
-    font-size: 12px;
-    line-height: 1.17;
-    list-style: none;
-    color: var(--dominant-color);
-}
-.auth__google-btn {
-    margin-top: 15px;
-}
-.auth__form{
-    display: flex;
-    padding: 30px;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-.auth__label{
-    padding-bottom: 15px;
-    font-size: 12px;
-    line-height: 1.17;
-    list-style: none;
-    color: var(--dominant-color);
-}
-.auth__input{
-    width: 100%;
-    height: 40px;
-    max-width: 448px;
-    cursor: pointer;
-    transition: border var(--animation-timing-function);
-    border: 1px solid rgba(33,33,33,.2);
-    border-radius: 4px;
-    outline: none;
-    margin: 4px 0 10px;
-    padding: 12px 42px;
-}
-.auth__btn {
     margin-left: auto;
     margin-right: auto;
-
-    border: 1px solid #FFFFFF;
-        border-radius: 5px;
-
-        padding: 0 0;
-    
-        background-color: var(--dominant-color);
-        color: #FFFFFF;
-        border-color: #FFFFFF;
-
-        font-size: 12px;
-        line-height: 1.33;
-           
-        text-align: center;
-        text-transform: uppercase;
-
-        &:not(:last-child) {
-               margin-right: 18px;
-            }
-
-
-        @media screen and (min-width: 768px) {
-            min-width: 152px;
-            min-height: 44px;
-            
-            
-            &:not(:last-child) {
-                margin-right: 32px;
-                }
-            
-        }
-
-        @media screen and (min-width: 1200px) {
-            min-width: 148px;
-             min-height: 42px;
-
-            &:not(:last-child) {
-                margin-right: 16px;
-                    }
-                }
-       
-
-            &:hover {
-                background-color: var(--accent-color);
-                border-color: var(--accent-color);
-            }
+    margin-bottom: 20px;
 }
-
-// Authentication End
