--- a/src/sass/_loader.scss
+++ b/src/sass/_loader.scss
@@ -1,14 +1,24 @@
 .bouncer {
+
+  position: fixed;
+  z-index: 250;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
   width: 100px;
   height: 100px;
+
+  &.is-hidden {
+    opacity: 0;
+  }
 }
 .bouncer div {
   width: 20px;
   height: 20px;
-  background: #22013d;
+  background: var(--accent-color);
   border-radius: 50%;
   animation: bouncer 0.5s cubic-bezier(0.19, 0.57, 0.3, 0.98) infinite alternate;
 }
