add render for auth

--- a/src/partials/auth-modal.html
+++ b/src/partials/auth-modal.html
@@ -1,5 +1,5 @@
 <div class="backdrop visually-hidden" data-auth-modal>
-    <div class ="auth__modal">
+<!--  <div class ="auth__modal">
         <div class="auth__modal-wrapper" content-auth-modal>
         <p class="auth__paragraph">You can use Google Account for authorization:</p>
         <div>
@@ -18,4 +18,5 @@
         
         </div>
     </div>
+-->  
 </div>
