add render to auth

--- a/src/partials/auth-modal.html
+++ b/src/partials/auth-modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop visually-hidden" data-auth-modal>
     <div class ="auth__modal">
-        <div class="auth__modal-wrapper" content-auth-modal>
+        <!-- <div class="auth__modal-wrapper" content-auth-modal>
         <p class="auth__paragraph">You can use Google Account for authorization:</p>
         <div class="auth__center">
             <button class="auth__btn auth__google-btn" sign-in-with-google>Sign in with Google</button>
@@ -14,6 +14,6 @@
                 <button class="auth__btn" type="submit">Sign Up</button>
             </div>
         </form>
-        </div>
+        </div> -->
     </div>
 </div>
