--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -320,3 +320,89 @@
     margin-right: auto;
     margin-bottom: 20px;
 }
+// auth
+.auth__modal{
+    background-color: var(--secondary-color);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%)scale(1);
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%), 0 2px 1px rgb(0 0 0 / 20%);
+
+    height: 70%;
+    width: 50%;
+    border-radius: 15px;
+}
+.auth__modal-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.auth__form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.auth__btn{
+    font-family: var(--dominant-font);
+    background-color: var(--secondary-color);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.33;
+    text-transform: uppercase;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    color: var(--dominant-color);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 110px;
+    height: 44px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 0;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: var(--secondary-color);
+        border: none;
+        transform: scale(1.1);
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 125.03px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 136px;
+    }
+}
+.auth__paragraph{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.auth__container{
+    display: flex;
+}
+.auth__input{
+    width: 100%;
+    min-width: none;
+    height: 40px;
+    cursor: pointer;
+    transition: border ;
+    border: 1px solid rgba(33,33,33,.2);
+    border-radius: 4px;
+    outline: none;
+    margin: 4px 0 10px;
+    padding: 12px 42px;
+}
+.auth__btn-sign-in{
+    margin-right: 15px;
+}
+.auth__label{
+    width: 370px;
+}
