--- a/src/sass/_my-library.scss
+++ b/src/sass/_my-library.scss
@@ -111,7 +111,13 @@
 
 
 .btn-container {
-    text-align: center;
+
+    display: flex;
+
+    @media screen and (min-width: 340px) {
+            display: block;
+            text-align: center;
+        }
 
     
 }
