--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import './modal';
 @import './loader';
 @import './film-card';
-@import './button-scroll-to-top'
+@import './button-scroll-to-top';
+@import './team-modal'
 
 
