--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,6 @@
       <svg class="footer__icon-heart" width="20" height="20">
         <use href="./images/icons.svg#icon-heart"></use>
       </svg>
-      <button type="button" class="footer__button">by GoIT Students</button>
-    </div>
-  </div>
+
+      <a data-modal-open type="button" id="footer__button" class="footer__button" data-modal-open href=''> by GoIT Students </a>
 </footer>
