--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -33,9 +33,21 @@
  
 }
 
+
+
+
+
+
 html {
     scroll-behavior: smooth;
 };
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 
 body {
