--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -4,21 +4,26 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.25);
-    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 15000;
     overflow: overlay;
     visibility: visible;
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &__is-hidden {
-        opacity: 0;
-        pointer-events: none;
-        visibility: hidden;
-    }
+
 }
 
-.modal__is-hidden {
+.backdrop__is-hidden, .backdrop-team__is-hidden {
+            opacity: 0;
+            pointer-events: none;
+            visibility: hidden;
+        }
+
+
+
+.modal__is-hidden,
+.modal-team__is-hidden {
     @media screen and (min-width: 768px) {
         opacity: 0;
         transform: translate(-50%, -50%) scale(0.6);
@@ -40,7 +45,7 @@
     
         top: 5px;
 
-        z-index: 149;
+        z-index: 15003;
 
 
         position: absolute;
@@ -71,7 +76,7 @@
     }
 }
 
-.modal__close-button {
+.modal__close-button, .modal-team__close-button {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -80,7 +85,7 @@
     right: 8px;
     top: 8px;
     margin-left: auto;
-    z-index: 150;
+    z-index: 15010;
 
     width: 30px;
     height: 30px;
