--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -76,6 +76,33 @@
     }
 }
 
+.modal-movie > iframe { 
+
+
+        min-width: 300px;
+        min-height: 180px;
+        position: absolute;
+        top: 240px;
+        right: -5px;
+    
+        
+                 @media screen and (min-width: 768px) {
+        min-width: 640px;
+            min-height: 480px;
+            position: absolute;
+            top: 10px;
+            right: 45px;
+                 }
+
+        @media screen and (min-width: 1024px) {
+                min-width: 640px;
+                    min-height: 480px;
+                    position: absolute;
+                    top: 40px;
+                    left: 102px;
+        }
+}
+
 .modal__close-button, .modal-team__close-button {
     position: absolute;
     display: flex;
