changed sing in to my acc

--- a/src/partials/my-library.html
+++ b/src/partials/my-library.html
@@ -14,7 +14,7 @@
         <a class="header--link header__link--active" href="">My Library</a>
       </li>
     </ul>
-    <button class="header__auth-btn" data-auth-modal-open>Sign In</button>
+    <button class="header__auth-btn" data-auth-modal-open>My Account</button>
   </nav>
   <div class="btn-container">
     <button class="wached-btn active">wached</button>
