--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -6,5 +6,13 @@
         </li>
        
     </ul>
-</div> 
-<!--лішки прийдуть з скрипту -->
+</div>    
+<!--лішки прийдуть з скрипту-->
+
+<!-- <button id="arrow-left" class="arrow-btn">prev</button>
+<div id="pagination-btns" class="pagination-btns">
+    
+    <button class="pagination-button"></button>
+    
+</div>
+<button id="arrow-right" class="arrow-btn">next</button> -->
