--- a/src/partials/auth-modal.html
+++ b/src/partials/auth-modal.html
@@ -1,19 +1,23 @@
 <div class="backdrop visually-hidden" data-auth-modal>
     <div class ="auth__modal">
-        <!-- <div class="auth__modal-wrapper" content-auth-modal>
-        <p class="auth__paragraph">You can use Google Account for authorization:</p>
-        <div class="auth__center">
-            <button class="auth__btn auth__google-btn" sign-in-with-google>Sign in with Google</button>
-        </div>
-        <p class="auth__paragraph">Or login to the app using your e-mail and password:</p>
-        <form class="auth__form">
-            <label class="auth__label">Your email <input type="email" class="auth__input" id="auth__email"></label>
-            <label class="auth__label">Your password <input type="password" class="auth__input" id="auth__password"></label>
-            <div>
-                <button class="auth__btn" type="submit">Sign In</button>
-                <button class="auth__btn" type="submit">Sign Up</button>
-            </div>
-        </form>
-        </div> -->
+        <!-- <div class ="auth__modal">
+  <div class="auth__modal-wrapper" content-auth-modal>
+  <p class="auth__paragraph">You can use Google Account for authorization:</p>
+  <div>
+      <button class="auth__btn auth__google-btn" id="google-sign-in" sign-in-with-google>Sign in with Google</button>
+  </div>
+  <p class="auth__paragraph">Or login to the app using your e-mail and password:</p>
+  <form class="auth__form">
+      <label class="auth__label"><p class="auth__input-text">Your username</p> <input type="text" class="auth__input auth__input-username" id="auth__username"></label>
+      <label class="auth__label"><p class="auth__input-text">Your email</p> <input type="email" class="auth__input auth__input-email" id="auth__email"></label>
+      <label class="auth__label"><p class="auth__input-text">Your password</p> <input type="password" class="auth__input auth__input-password" id="auth__password"></label>
+      </form>
+      <div class="auth__container">
+          <button class="auth__btn-sign-in auth__btn" id="sign-in" >Sign In</button>
+          <button class="auth__btn-sign-up auth__btn" sign-up>Sign Up</button>
+      </div>
+  
+  </div>
+</div> -->
     </div>
 </div>
