--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -76,30 +76,38 @@
     }
 }
 
-.modal-movie > iframe { 
-
-
-        min-width: 300px;
-        min-height: 180px;
-        position: absolute;
-        top: 240px;
-        right: -5px;
+.iframe { 
+        display: block;
+            
+            z-index: 20000;
+            min-width: 300px;
+            min-height: 180px;
+            position: relative;
+            margin-right: auto;
+            margin-left: auto;
+           
+            right: -5px;
+            top: 325px;
     
         
                  @media screen and (min-width: 768px) {
-        min-width: 640px;
-            min-height: 480px;
-            position: absolute;
-            top: 10px;
-            right: 45px;
+            min-width: 704px;
+                min-height: 497px;
+                position: relative;
+                margin-right: auto;
+                margin-left: auto;
+                top: 84px;
+                right: 0px;
                  }
 
         @media screen and (min-width: 1024px) {
-                min-width: 640px;
-                    min-height: 480px;
-                    position: absolute;
-                    top: 40px;
-                    left: 102px;
+                min-width: 936px;
+                    min-height: 551px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    position: relative;
+                    /* top: 81px; */
+                    left: 6px;
         }
 }
 
