--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,5 +12,15 @@
         <use href="./images/icons.svg#icon-heart"></use>
       </svg>
 
-      <a data-modal-open type="button" id="footer__button" class="footer__button" data-modal-open href=''> by GoIT Students </a>
+      <a
+        data-modal-open
+        type="button"
+        id="footer__button"
+        class="footer__button"
+        href=""
+      >
+        by GoIT Students
+      </a>
+    </div>
+  </div>
 </footer>
