fix weight and height

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -101,12 +101,11 @@
                  }
 
         @media screen and (min-width: 1024px) {
-                min-width: 936px;
-                    min-height: 551px;
+                min-width: 70vw;
+                    min-height: 83vh;
                     margin-left: auto;
                     margin-right: auto;
                     position: relative;
-                    /* top: 81px; */
                     left: 6px;
         }
 }
