--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,18 +1,9 @@
 <div class="pagination">
     <ul>
         <li>
-            <button class="btn prev">Prev</button>
-            <button class="btn next">next</button>
+            <button type="button" class="btn prev">Prev</button>
+            <button type="button" class="btn next">next</button>
         </li>
        
     </ul>
 </div>    
-<!--лішки прийдуть з скрипту-->
-
-<!-- <button id="arrow-left" class="arrow-btn">prev</button>
-<div id="pagination-btns" class="pagination-btns">
-    
-    <button class="pagination-button"></button>
-    
-</div>
-<button id="arrow-right" class="arrow-btn">next</button> -->
