--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,9 +1,8 @@
 <div class="pagination">
-    <ul>
-        <li>
-            <button type="button" class="btn prev">Prev</button>
-            <button type="button" class="btn next">next</button>
-        </li>
-       
-    </ul>
-</div>    
+  <ul>
+    <li>
+      <button type="button" class="btn prev">Prev</button>
+      <button type="button" class="btn next">Next</button>
+    </li>
+  </ul>
+</div>
