--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -13,7 +13,17 @@
             <li class="team__item">
                 <a class="team__link" href="https://github.com/YuriiShatskyi">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/YuriiShatskyi.jpg" alt="Yurii Shatskyi">
+                        <img class="team__img" srcset="
+                                ./images/modal-team/YuriiShatskyi-mobile-140.jpg 140w,
+                                ./images/modal-team/YuriiShatskyi-mobile-2x-280.jpg 280w,
+                                ./images/modal-team/YuriiShatskyi-tablet-170.jpg 170w,
+                                ./images/modal-team/YuriiShatskyi-tablet-2x-340.jpg 340w,
+                                ./images/modal-team/YuriiShatskyi-desktop-245.jpg 245w,
+                                ./images/modal-team/YuriiShatskyi-desktop-2x-490.jpg 490w"
+                            sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                            src="./images/modal-team/YuriiShatskyi-mobile-140.jpg"
+                            alt="Yurii Shatskyi"
+                            width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Yurii Shatskyi</h2>
@@ -26,7 +36,17 @@
             <li class="team__item">
                 <a class="team__link" href="https://github.com/LizaPoperechna">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/LizaPoperechna.jpg" alt="Liza Poperechna" width="360px">
+                        <img class="team__img" srcset="
+                                ./images/modal-team/LizaPoperechna-mobile-140.jpg 140w,
+                                ./images/modal-team/LizaPoperechna-mobile-2x-280.jpg 280w,
+                                ./images/modal-team/LizaPoperechna-tablet-170.jpg 170w,
+                                ./images/modal-team/LizaPoperechna-tablet-2x-340.jpg 340w,
+                                ./images/modal-team/LizaPoperechna-desktop-245.jpg 245w,
+                                ./images/modal-team/LizaPoperechna-desktop-2x-490.jpg 490w"
+                            sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                            src="./images/modal-team/LizaPoperechna-mobile-140.jpg"
+                            alt="Liza Poperechna"
+                            width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Liza Poperechna</h2>
@@ -38,7 +58,17 @@
             <li class="team__item">
                 <a class="team__link" href="https://github.com/DubeiA">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/AnatoliiDubei.jpg" alt="Anatolii Dubei">
+                        <img class="team__img" srcset="
+                                ./images/modal-team/AnatoliiDubei-mobile-140.jpg 140w,
+                                ./images/modal-team/AnatoliiDubei-mobile-2x-280.jpg 280w,
+                                ./images/modal-team/AnatoliiDubei-tablet-170.jpg 170w,
+                                ./images/modal-team/AnatoliiDubei-tablet-2x-340.jpg 340w,
+                                ./images/modal-team/AnatoliiDubei-desktop-245.jpg 245w,
+                                ./images/modal-team/AnatoliiDubei-desktop-2x-490.jpg 490w"
+                            sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                            src="./images/modal-team/AnatoliiDubei-mobile-140.jpg" 
+                            alt="Anatolii Dubei" 
+                            width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Anatolii Dubei</h2>
@@ -50,7 +80,17 @@
             <li class="team__item">
                 <a class="team__link" href="https://github.com/yulia-mazurenko">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/YuliaMazurenko.jpg" alt="Yulia Mazurenko">
+                        <img class="team__img" srcset="
+                            ./images/modal-team/YuliaMazurenko-mobile-140.jpg 140w,
+                            ./images/modal-team/YuliaMazurenko-mobile-2x-280.jpg 280w,
+                            ./images/modal-team/YuliaMazurenko-tablet-170.jpg 170w,
+                            ./images/modal-team/YuliaMazurenko-tablet-2x-340.jpg 340w,
+                            ./images/modal-team/YuliaMazurenko-desktop-245.jpg 245w,
+                            ./images/modal-team/YuliaMazurenko-desktop-2x-490.jpg 490w"
+                        sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                        src="./images/modal-team/YuliaMazurenko-mobile-140.jpg" 
+                        alt="Yulia Mazurenko" 
+                        width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Yulia Mazurenko</h2>
@@ -62,7 +102,17 @@
             <li class="team__item">
             <a class="team__link" href="https://github.com/MartaSyvyk">
                 <div class="team__img-wrapper">
-                    <img class="team__img" width="245" height="270" src="./images/modal-team/MartaSyvyk.jpg" alt="Marta Syvyk">
+                    <img class="team__img" srcset="
+                        ./images/modal-team/MartaSyvyk-mobile-140.jpg 140w,
+                        ./images/modal-team/MartaSyvyk-mobile-2x-280.jpg 280w,
+                        ./images/modal-team/MartaSyvyk-tablet-170.jpg 170w,
+                        ./images/modal-team/MartaSyvyk-tablet-2x-340.jpg 340w,
+                        ./images/modal-team/MartaSyvyk-desktop-245.jpg 245w,
+                        ./images/modal-team/MartaSyvyk-desktop-2x-490.jpg 490w"
+                    sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                    src="./images/modal-team/MartaSyvyk-mobile-140.jpg" 
+                    alt="Marta Syvyk" 
+                    width="140" height="140"/>
                 </div>
                 <div class="team__info">
                     <h2 class="team__student-name">Marta Syvyk</h2>
@@ -74,7 +124,17 @@
             <li class="team__item">
                 <a class="team__link"  href="https://github.com/KorotkayaNastuha">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/NastyaKorotchuk.jpg" alt="Nastya Korotchuk">
+                        <img class="team__img" srcset="
+                            ./images/modal-team/NastyaKorotchuk-mobile-140.jpg 140w,
+                            ./images/modal-team/NastyaKorotchuk-mobile-2x-280.jpg 280w,
+                            ./images/modal-team/NastyaKorotchuk-tablet-170.jpg 170w,
+                            ./images/modal-team/NastyaKorotchuk-tablet-2x-340.jpg 340w,
+                            ./images/modal-team/NastyaKorotchuk-desktop-245.jpg 245w,
+                            ./images/modal-team/NastyaKorotchuk-desktop-2x-490.jpg 490w"
+                        sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                        src="./images/modal-team/NastyaKorotchuk-mobile-140.jpg" 
+                        alt="Nastya Korotchuk" 
+                        width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Nastya Korotchuk</h2>
@@ -86,7 +146,17 @@
             <li class="team__item">
                 <a class="team__link"  href="https://github.com/RostyslavSuprun">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/RostyslavSuprun.jpeg" alt="Rostyslav Suprun">
+                        <img class="team__img" srcset="
+                            ./images/modal-team/RostyslavSuprun-mobile-140.jpg 140w,
+                            ./images/modal-team/RostyslavSuprun-mobile-2x-280.jpg 280w,
+                            ./images/modal-team/RostyslavSuprun-tablet-170.jpg 170w,
+                            ./images/modal-team/RostyslavSuprun-tablet-2x-340.jpg 340w,
+                            ./images/modal-team/RostyslavSuprun-desktop-245.jpg 245w,
+                            ./images/modal-team/RostyslavSuprun-desktop-2x-490.jpg 490w"
+                        sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                        src="./images/modal-team/RostyslavSuprun-mobile-140.jpg" 
+                        alt="Rostyslav Suprun" 
+                        width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Rostyslav Suprun</h2>
@@ -98,10 +168,20 @@
             <li class="team__item">
                 <a class="team__link"  href="https://github.com/AleXKeepeR21">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/OleksandrHudik.jpg" alt="Oleksandr Hudik">
+                        <img class="team__img" srcset="
+                            ./images/modal-team/OleksandrKhudik-mobile-140.jpg 140w,
+                            ./images/modal-team/OleksandrKhudik-mobile-2x-280.jpg 280w,
+                            ./images/modal-team/OleksandrKhudik-tablet-170.jpg 170w,
+                            ./images/modal-team/OleksandrKhudik-tablet-2x-340.jpg 340w,
+                            ./images/modal-team/OleksandrKhudik-desktop-245.jpg 245w,
+                            ./images/modal-team/OleksandrKhudik-desktop-2x-490.jpg 490w"
+                        sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                        src="./images/modal-team/OleksandrKhudik-mobile-140.jpg" 
+                        alt="Oleksandr Khudik" 
+                        width="140" height="140"/>
                     </div>
                     <div class="team__info">
-                        <h2 class="team__student-name">Oleksandr Hudik</h2>
+                        <h2 class="team__student-name">Oleksandr Khudik</h2>
                         <p class="team__role">Developer</p>
                     </div>
                 </a>
@@ -110,7 +190,17 @@
             <li class="team__item">
                 <a class="team__link"  href="https://github.com/YuriPanchuck">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/YuriiPanchuck.jpg" alt="Yurii Panchuck">
+                        <img class="team__img" srcset="
+                            ./images/modal-team/YuriiPanchuck-mobile-140.jpg 140w,
+                            ./images/modal-team/YuriiPanchuck-mobile-2x-280.jpg 280w,
+                            ./images/modal-team/YuriiPanchuck-tablet-170.jpg 170w,
+                            ./images/modal-team/YuriiPanchuck-tablet-2x-340.jpg 340w,
+                            ./images/modal-team/YuriiPanchuck-desktop-245.jpg 245w,
+                            ./images/modal-team/YuriiPanchuck-desktop-2x-490.jpg 490w"
+                        sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                        src="./images/modal-team/YuriiPanchuck-mobile-140.jpg" 
+                        alt="Yurii Panchuck" 
+                        width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Yurii Panchuck</h2>
@@ -122,7 +212,17 @@
             <li class="team__item">
                 <a class="team__link" href="https://github.com/ruchey34">
                     <div class="team__img-wrapper">
-                        <img class="team__img" width="245" height="270" src="./images/modal-team/OlehMerkulov.jpg" alt="Oleh Merkulov">
+                        <img class="team__img" srcset="
+                            ./images/modal-team/OlehMerkulov-mobile-140.jpg 140w,
+                            ./images/modal-team/OlehMerkulov-mobile-2x-280.jpg 280w,
+                            ./images/modal-team/OlehMerkulov-tablet-170.jpg 170w,
+                            ./images/modal-team/OlehMerkulov-tablet-2x-340.jpg 340w,
+                            ./images/modal-team/OlehMerkulov-desktop-245.jpg 245w,
+                            ./images/modal-team/OlehMerkulov-desktop-2x-490.jpg 490w"
+                        sizes="(min-width: 1280px) 245px, (min-width: 768px) 170px, (max-width: 767px) 140px, 100vw"
+                        src="./images/modal-team/OlehMerkulov-mobile-140.jpg" 
+                        alt="Oleh Merkulov" 
+                        width="140" height="140"/>
                     </div>
                     <div class="team__info">
                         <h2 class="team__student-name">Oleh Merkulov</h2>
