--- a/src/sass/_team-modal.scss
+++ b/src/sass/_team-modal.scss
@@ -44,8 +44,8 @@
         top: 10px;
         left: 50%;
         transform: translate(-50%, 0%) scale(1);
-        width: 280px;
-        padding: 48px 20px 40px 20px;
+        width: 310px;
+        padding: 40px 10px 25px 10px;
 
 
     }
@@ -54,23 +54,51 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 704px;
-        padding: 40px 72px 40px 30px;
+        width: 740px;
+        padding: 40px 20px 30px 20px;
         transform: translate(-50%, -50%) scale(1);
     }
 
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 1216px) {
         width: 1080px;
-        padding: 25px 20px 25px 20px;
+        padding: 40px 20px 25px 20px;
         min-height: 558px;
     }
 }
 
 
 
+.team__container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    justify-content: center;
+
+
+    @media screen and (min-width: 768px) {
+
+        gap: 15px;
+
+    }
+}
+
 .team__img {
 
+    width: 140px;
+    height: 140px;
+
     display: block;
+
+    @media screen and (min-width: 768px) {
+        width: 160px;
+        height: 170px;
+    }
+
+
+    @media screen and (min-width: 1216px) {
+        width: 245px;
+        height: 270px;
+    }
 }
 
 .overflow {
@@ -81,41 +109,85 @@
     transform: scale(1);
 }
 
-.team__container {
-        display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-}
 
 .team__item {
     position: relative;
-    height: 250px;
+    height: 172px;
     border-radius: 5px;
     overflow: hidden;
     cursor: pointer;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+
+
+
+    &:hover,
+    &:focus {
+        transform: scale(1.05);
+        transition: var(--main-transition);
+        }
+
+    @media screen and (min-width: 768px) {
+            height: 170px;
+            border-radius: 20px;
+    }
+
+    @media screen and (min-width: 1216px) {
+            height: 250px;
+            border-radius: 30px;
+    }
+
 }
 
 .team__info {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 1);;
+    background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
-    height: 25%;
-    opacity: 0.8;
-    padding: 8px;
+    height: 32px;
+    padding-top: 2px;
+
+    @media screen and (min-width: 768px) {
+        height: 25%;
+        padding-top: 4px;
+    }
+
+    @media screen and (min-width: 1216px) {
+        padding-top: 10px;
+    }
 }
 
+
 .team__student-name {
-    font-size: 20px;
+    font-size: 12px;
     text-transform: uppercase;
     font-weight: 400;
     color: var(--accent-color);
     text-align: center;
+
+    
+
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+            margin-bottom: 2px;
+        }
+    
+    @media screen and (min-width: 1216px) {
+        font-size: 18px;
+    }
 }
 
 .team__role {
-    margin-top: 5px;
     color: var(--secondary-color);
     text-align: center;
+    font-size: 12px;
+
+    @media screen and (min-width: 768px) {
+            font-size: 14px;
+        }
+        
+    @media screen and (min-width: 1216px) {
+        font-size: 18px;
+    }
 }
