--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -101,8 +101,8 @@
                  }
 
         @media screen and (min-width: 1024px) {
-                min-width: 936px;
-                    min-height: 551px;
+                min-width: 65vw;
+                    min-height: 75vh;
                     margin-left: auto;
                     margin-right: auto;
                     position: relative;
