fix open on my library page

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,9 @@
         <a class="header--link" href="./library.html">My Library</a>
       </li>
     </ul>
-    <button class="header__auth-btn" data-auth-modal-open>My Account</button>
+    <div class="header__auth-box">
+      <button class="header__auth-btn auth__my-account" data-auth-modal-open>My Account</button>
+    </div>
   </nav>
   <form class="header__form">
     <input
