fix-display none

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,4 +1,4 @@
-<div class="pagination display">
+<div class="pagination">
   <ul>
     <li>
       <button type="button" class="btn prev">Prev</button>
