--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 @import './loader';
 @import './film-card';
 @import './button-scroll-to-top';
-@import './team-modal'
+@import './team-modal';
+@import './darktheme';
 
 
