--- a/src/partials/auth-modal.html
+++ b/src/partials/auth-modal.html
@@ -1,3 +1,4 @@
 <div class="backdrop visually-hidden" data-auth-modal>
-  <div class="auth__modal"></div>
+  <div class="auth__modal">
+  </div>
 </div>
