--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--dominant-color);
+    color: black;
     min-height: 100;
     padding: 10px;
 }
@@ -10,29 +10,27 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
-    background-color: #283035;
     padding: 8px;
     border-radius: 50px;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);  
-    //   @media screen and (min-width: 320px) {
-    //     flex-wrap: nowrap;
-    //     width: 310px;
-    //     font-size: 12px;
-    // }
-    //     @media screen and (min-width: 768px) {
-    //     width: 580px;
+      @media screen and (min-width: 320px) {
+        flex-wrap: nowrap;
+        width: 310px;
+        font-size: 12px;
+    }
+        @media screen and (min-width: 768px) {
+        width: 580px;
            
-    //     }
+        }
     
-    //     @media screen and (min-width: 1200px) {
-    //     width: 580px;  
-    //     }
+        @media screen and (min-width: 1200px) {
+        width: 580px;  
+        }
    
 }
 
 .pagination ul li {
-    color: #fff;
+    color: black;
     
     list-style: none;
     line-height: 45px;
