--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,7 @@
         <use href="./images/icons.svg#icon-heart"></use>
       </svg>
 
-      <a
+      <button
         data-modal-open
         type="button"
         id="footer__button"
@@ -20,7 +20,7 @@
         href=""
       >
         by GoIT Students
-      </a>
+      </button>
     </div>
   </div>
 </footer>
