--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
 <div class="backdrop is-hidden backdrop__is-hidden">
   <div class="modal-movie modal__is-hidden"></div>
-  <iframe class="iframe" frameborder="0" allowfullscreen="true"></iframe>
+  <iframe class="iframe" allowfullscreen="true"></iframe>
 </div>
